Runs on JDK 16 as a Java Application (not as an applet)